added kcat command used

--- a/KafkaDemo.ipynb
+++ b/KafkaDemo.ipynb
@@ -324,7 +324,7 @@
    "outputs": [],
    "source": [
     "#kcat command: connect to local Kafka broker, specify a topic, and consume messages from the earliest offset\n",
-    "\n"
+    "kcat -b localhost:9092 -t recitation-d\n"
    ]
   }
  ],
